--- a/Cafe.html
+++ b/Cafe.html
@@ -407,7 +407,7 @@ left: 680px;
 {/block:Audio}
  
 {block:Quote}
-<div class="title">“{Quote}”</div>
+<div class="title">Â“{Quote}Â”</div>
 {block:Source}<div class="text"><br>~ {Source}</div>{/block:Source}
 {/block:Quote}
  
