--- a/Floating.html
+++ b/Floating.html
@@ -284,8 +284,8 @@ font-size: 11px;
  
 {block:IfNotInfiniteScroll}
 <div class="pagination">
-{block:PreviousPage}<a href="{PreviousPage}">« </a>{/block:PreviousPage}
-{block:NextPage}<a href="{NextPage}"> »</a>{/block:NextPage}
+{block:PreviousPage}<a href="{PreviousPage}">Â« </a>{/block:PreviousPage}
+{block:NextPage}<a href="{NextPage}"> Â»</a>{/block:NextPage}
 </div>
 {/block:IfNotInfiniteScroll}
  
@@ -323,7 +323,7 @@ font-size: 11px;
 {/block:Audio}
  
 {block:Quote}
-<div class="title">“{Quote}”</div>
+<div class="title">â€œ{Quote}â€</div>
 {block:Source}<div class="text"><br>~ {Source}</div>{/block:Source}
 {/block:Quote}
  
